# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
gendiff/: __init__.py  constants.py  diff_json.py  diff_plain.py  diff_stylish.py  interface.py  modules.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/test_data/: json_result.txt
