[project]
authors = [
    {name = "Daniil Shomin", email = "d.sh.v@yandex.ru"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
